styles/land_page.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap');

li {
    list-style: none;
    display: inline;
}

a {
    text-decoration: none;
}

body {
    background-color: #fff;
    overflow-x: hidden;
    padding: 0;
    margin: 0;
    width: 100%;
    color: #FF5B5B;
    font-family: 'Montserrat', sans-serif;
}

.navbar {
    margin-left: 0;
    display: inline;
    justify-content: space-between;
    align-items: center;
    text-align: center;
    padding: 0;
    color: #FF5B5B;
    
}
.nav-link {
    display: inline;
    padding: 0.5rem 1rem;
    margin-left:2vw;
    color: #FF5B5B;
    transition: 0.5s;
}

.nav-link:hover{
    transition: 0.5s;
    color: #7e0000;
}

header {
    height: 100vh;
}

.container {
    padding: 0;
    margin: 0;
    width: 100vw;
}
.container ul{
    margin-left:-5vw;
}

.header-row {
    font-size: 125%;
    text-align: center;
}

.header-content {
    background-image: url(../images/homepage.png);
    background-size: cover;
    background-position: center top 15vh;
    background-repeat: no-repeat;
    background-attachment: fixed;
    height: 100vh;
}
.about{
    position: relative;
    background-color: rgb(242,66,66);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    height: 50vw;
}
.about img{
    padding-top:11%;
    padding-left: 5%;
    width:35%;
}
.text1{
    position:absolute;
    margin: 30px;
    color: #fdfdfd;
    padding-top: 11%;
    top:0;
    width:50%;
    right:0;
    height:35vw;
    
}
.text1 h1{
    position:absolute;
    top:10%;
    width:35vw;
    color:#8F0000;
    padding-top: 5%;
    font-size:4vw;
    right:25%;
    

}
.text1 p{
    position:absolute;
    top:40%;
    font-size:1.3vw;
}
#about{
    right:0;
}
.events{
    padding:30px;
    position: relative;
    background-color: rgb(253, 253, 253);
    height:40vw;
}


#res{
    position:absolute;
    bottom:2vw;
    font-size:1.5vw;
    right:3vw;
    color:#d23d3d;
    font-weight:bold;
}
.text2{
    position: absolute;
    height:22vw;
    top:20%;
    font-size:3vw;
    transform: rotate(-90deg);
    left:0;
}
.text2 h1{
    margin:0;
}
:root {
    --page-margin: min(2rem, 5vw);
    color: #444;
    }
    
section {
    position: absolute;
    right: 0;
    top:10%;
    width: 80%;
display: grid;
grid-template-columns: var(--page-margin) [center-start] 1fr [center-end] var(--page-margin);

}

.cards-wrapper {

grid-column: center-start / -1;
display: grid;
grid-auto-flow: column;
gap: 1rem;
overflow: auto;
padding-bottom: 1rem;
padding-right: var(--page-margin);
}

.event-card {
    overflow: hidden;
    border-radius: 12px;
    position: relative;
    display: grid;
    place-content: center;
    background-color: #000000;
    color: #15928A;
    font-size: 1.5rem;
    height: 30vw;
    width: 30vw;
    cursor: pointer;
}
.event-card img{
    border-radius: 12px;
    height: 30vw;
    width: 31vw;
    scale: 1px;;
    transition: all .9s ease;
}

.event-card:hover  img{
    opacity: 0.5;
    transform:scale(1.15);
}
.event-overlay{
    position: absolute;
    width: 100%;
    height: 50%;
    top: 50%;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 1;
    background-image:linear-gradient(to bottom, rgba(245, 246, 252, 0), rgba(0, 0, 0, 0.679),rgb(0, 0, 0));
    cursor: pointer;

}

.event-details{
    margin: 10px;
    position:absolute;
    width: 100%;
    height: 100%;
}

.eventheading{
    position: absolute;
    left: 20px;
    top: 10px;
    margin-bottom: 0;
    font-size: 1.8vw;
    color: white;
    font-family:'Montserrat', sans-serif ;
}

.eventicon{
    position: absolute;
    height:1.3vw !important;
    width:fit-content !important;
}

.event-card:hover .eventicon{
    transform: scale(1);
}
 .event-details ul {
    position: absolute; 
    width: 100%;
    margin:0;
     top: 39%;
 }

 .event-details ul li p{
     margin: 0;
     font-family: 'Montserrat', sans-serif;
     color: white;
     margin-bottom: 1;
     font-size: 1.1vw;
     position: relative;
     left:10%;
 }
 


.dts{
    position: absolute;
    bottom: 0;
    height: 11vw;
    width: 30vw;
    border-radius: 10px;
    /*background-image: linear-gradient(to bottom,rgba(222, 186, 186, 0), #FE5558,#8F0000);*/
    z-index: 1;
    
}

.dts h1{
    font-size:1vw;
    color: #f1f1f1;
    font-family: 'Montserrat', sans-serif;
    padding-left: 5%;
}

.tont{
    position: absolute;
    bottom:10%;
    right:5%;
    font-size: 1vw;
    z-index: 2;
    
}
.tont a{
    color: rgb(255, 255, 255);
}
.newmag{
    position: relative;
    background-color: rgb(242,66,66);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    height: 50vw;
    padding: 50px 0 50px 0
}
.column {
    position: relative;
    float: left;
    width: 50%;
    height:50vw;
  }
.row:after {
    content: "";
    display: table;
    clear: both;
  }
.column img{
    padding-top:3%;
    padding-bottom: 3%;
    padding-right: 10%;
    width: 50%;
}

#lit{
    position: absolute;
    padding-bottom: 30px;
    right:10%;
}
#newlt{
    padding-top:30px;
    position: absolute;
    bottom:0;
    left: 10%;
}
.text3{
    
    color:white;
}
.text3 h1{
    color:#8F0000;
    font-size: 3.5vw;
    position: absolute;
    left:10%;
    font-weight: bold;
}
.text3 p{
    position:absolute;
    left:10%;
    font-size:1.2vw;
    color:white;
    top:15%;
    text-align: left;
    width:90%;
}
#news{
    color: #FE5858;
    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
    opacity: 1;
}
.text4{
    color:white;
    position: absolute;
    width: 100%;
    bottom: 10%;
    right:10%;
    height:22vw;
    
}
.text4 h1{
    right:40%;
    position:absolute;
    color:#8F0000;
    font-family: Montserrat;
    font-size:3.5vw;
    font-weight:1400;
    
}
.text4 p{
    position:absolute;
    right:10%;
    font-size:1.1vw;
    color:white;
    bottom:0;
    text-align: left;
    width:70%;
}
.br{
    padding-top: 10px;
    position: relative;
    width:98vw;
    height:100vw;
}
.board{
    padding-top: 10px;
    position:absolute;
    bottom:0;
    width:99vw;
    height:100vw;
    background-image: linear-gradient(to bottom,#f24242 50%,#f09595);
}
.yrs{
    position:absolute;
    bottom:0;
    display: inline;
    justify-content: space-between;
    align-items: center;
    text-align: center;
    padding: 1.5rem;
    width: 90vw;
    height: 5vw;
    color: #ececec;
}
.yrs-link {
    display: inline;
    padding: 0.5rem 1rem;
    color: #ffffff;
    transition: 0.5s;
}
.yrs-menu a{
    font-size: 2vw;
}

.yrs-link:hover{
    transition: 0.5s;
    color: #eeeeee;
}
.footer{
    position: relative;
    z-index: 5;
    height:25vw;
    bottom:0;
    background-color:white;
    padding-top:5vh;
}
.footer #logo{
    margin-left:2%;
}

.footer img{
    width: 20%;

}
.cont{
    font-size:1.5vw;
    position: absolute;
    left:22%;
    top: 0;
    padding-top: 2vh;
}
.cont h2{
    padding: 2% 0 2% 0;
    margin:0;
    font-size: 1.5vw;
    color: #444;
    font-weight: lighter;
}
.cont a{
    font-size:1.5vw ;
    margin-top:2vw;
    color:#444;
    font-weight: lighter;
}
.soc{
    margin:10px;
}
.soc-item{
    display:inline;
    padding-right:5%;
    margin-right: 1.3%;
}
.soc-item #yt {
    width: 2.6%;
}
.soc-item img{
    width:2.3%;
    
}
.yt{
    padding-top:5vh;
    padding-bottom:3%;
    padding-right: 2%;
    top: 0;
    width:28vw;
    height:18vw;
    position:absolute;
    right:0;
}
.coprt{
    position:absolute;    
    left:45%;
    font-family: Montserrat;
    font-weight:lighter;
}
.coprt h1{
    font-size: 1.5vw;
    font-family: Montserrat;
    font-weight:lighter;
    color:black;

}
@media screen and (max-width:1024px) and (min-width:200px){
    .container ul{
        margin-left: -10vw;
    }
    #malayalam {
        display: none !important;
    }
    .about {
        height:220vw;
    }
    .about img{
        width:90%;
    }
    .text1{
        top:35%;
        height:90vw;
        width:90%;
        left:0;
    }
    .board{
        width:100vw;
    }
    .text1 h1{
        top:0;
        left:10%;
        width:70vw;
        font-size:10vw;
        
        
    }
    .text1 p{
        font-size:4vw;
        top:30%;
        left:0;
        width:100%;
        height:90vw;
    
    }
    .events{
        height:120vw;
    }
    .text2{
        transform: rotate(0deg);
        top:10%;
        left:10%;
        font-size:10vw;

    }
    section {
        left: 0;
        top:35%;
        width: 98%;
    
    }
    #res{
        font-size:5vw;
        bottom:4vw;
    }
    .tont{
        font-size:4vw;
    }
    .newmag{
        height:350vw;
        padding:0;
    }
    .column{
        width: 100%;
        height:170vw;
    }
    .column img {
        top:2%; 
        width:70%;
    }
    #newlt{
        top:0;
    }
    .text3{
        position:absolute;
        top:50%;
        height: 85vw;
        width: 100%;

    }
    .text3 h1{
        font-size:7vw;
        top:0;
        padding-bottom:1%;
        left:20%;
    }
    .text3 p{
        font-size:3.5vw;
        width: 75%;
        left:15%;
        top:20%;
    }
    .text4{
        top:45%;
        height: 75vw;
        width: 100%;
    }
    .text4 h1{
        font-size:7vw;
        top:0;
        padding-bottom:1%;
        left:30%;
    }
    .text4 p{
        font-size:3.5vw;
        width: 75%;
        left:25%;
        top:20%;
    }


    
    .event-card {
        height: 70vw;
        width: 70vw;
    }
    .event-card img{
        height: 70vw;
        width: 70vw;
    }
    .br{
        height:740vw;
    }
    .board{
        height:740vw;
    }
    .yrs{
        width:88vw;
        bottom:3%;
        padding: 0;
    }
    .yrs-menu a{
        font-size:6vw;
    }
    .footer{
        position: relative;
        height:50vw;
        padding:2vh;
    }
    .footer #logo{
        margin-left:0;
    }
    .footer img{
        position:absolute;
        width: 45vw;
        bottom: 18%;
        
        
    }
    .cont{
        width:45vw;
        top: 0;
        left:55%;
        font-size: 3.5vw;
    }
    .cont h2{
        font-size: 3.5vw;
    }
    .cont a{
        font-size: 3.5vw;
    }

    .hr{
        position:absolute;
        bottom:6%;
        z-index:6;
        width:93%;
    }
    .soc{
        position:absolute;
        bottom: 10%;
        left:15%;
        height:10vw;
        width:70vw;
        

    }
    .soc-item{
        padding-right: 13vw;
    }
    .soc-item #yt {
        margin-top: 1%;
        width: 8%;
    }
    .soc-item img{
        width:8%;
    }
    .yt{
        display: none;
    }
    .coprt{
        bottom: 0;
        left:40%;
    }
    .coprt h1{
        font-size:3vw;

    }
}
@media screen and (max-width:1024px) and (min-width:500px){
    .br{
        height:740vw;
    }
    .board{
        height:740vw;
    }
}
@media screen and (min-width:1024px){
    .header-content {
        background-position: center top 10vh;
    }
}

#literary {
    color: #fff;
    letter-spacing: 3px;
    text-shadow: -1px 1px 0 #FF5B5B,
                1px 1px 0 #FF5B5B,
                1px -1px 0 #FF5B5B,
                -1px -1px 0 #FF5B5B;
}

